feat：增加JavaFX的相关配置